# pm3-weather

./: Cargo.toml  README.md
src/: lib.rs  main.rs  time.rs  weather.rs  weather_code.rs
ui/: app-window.slint
