[package]
name = "pm3-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["windowed"]
windowed = ["slint/backend-winit"]
framebuffer = ["dep:slint-backend-linuxfb"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
slint = { version = "1.14.1", default-features = false, features = [
  "compat-1-2",
  "std",
  "renderer-software",
] }
slint-backend-linuxfb = { version = "0.1.1", optional = true }

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true
